[project]
name = "diffusionui"
version = "0.1.0"
description = "Minimal Tkinter UI for Intel-friendly text-to-image generation"
requires-python = ">=3.14"
dependencies = [
    "controlnet-aux>=0.0.10",
    "diffusers>=0.37.1",
    "gdown>=5.2.1",
    "hf-xet>=1.4.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "openvino>=2026.0.0",
    "openvino-genai>=2026.0.0.0",
    "optimum>=2.1.0",
    "optimum-intel>=1.27.0",
    "peft>=0.18.1",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "requests>=2.33.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "timm>=1.0.26",
    "tomesd>=0.1.3",
    "transformers>=4.57.6",
]


[tool.ruff.lint]
extend-select = ["UP", "SIM", "PERF", "BLE"]

[dependency-groups]
dev = [
    "pytest-bdd>=8.1.0",
]
