[project]
name = "diffusionui"
version = "0.1.0"
description = "Minimal Tkinter UI for Intel-friendly image generation"
requires-python = ">=3.14"
dependencies = [
    "huggingface-hub",
    "numpy",
    "openvino",
    "openvino-genai",
    "pillow",
]


[tool.ruff.lint]
extend-select = ["UP", "SIM", "PERF", "BLE"]

[[tool.uv.index]]
# Optional name for the index.
name = "pytorch"
# Required URL for the index.
url = "https://download.pytorch.org/whl/xpu"
